--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,15 +1,11 @@
 <mvc:View
-	controllerName="sap.ui.demo.basicTemplate.controller.App"
-	xmlns:mvc="sap.ui.core.mvc"
-	displayBlock="true"
-	xmlns="sap.m">
-	<App id="app">
-		<pages>
-			<Page
-				id="page"
-				title="{i18n>title}">
-				<content></content>
-			</Page>
-		</pages>
-	</App>
+		height="100%"
+		xmlns:core="sap.ui.core"
+		xmlns:mvc="sap.ui.core.mvc"
+		xmlns="sap.m"
+		xmlns:semantic="sap.m.semantic"
+		displayBlock="true">
+
+	<SplitContainer id="app" />
+
 </mvc:View>
