--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -21,7 +21,9 @@
 					icon=""
 					iconDensityAware="false"
 					iconInset="false" 
-					type="Active"/>
+					type="Active"
+					press="onSelectList"
+					/>
             </List>
             <semantic:customFooterContent>
                 <Button icon="sap-icon://add" type="Emphasized"
