--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -24,7 +24,13 @@
 							title="{name}"
 							type="Active"
 							press=""
-							number="{ parts: [{path: 'total'}, {path: ''}], type: 'sap.ui.model.type.Currency', formatOptions: {showMeasure: false } }"
+							number="{
+								parts: [{path: 'total'}, {path: ''}],
+								type: 'sap.ui.model.type.Currency',
+								formatOptions: {
+									showMeasure: false 
+								} 
+							}"
 							numberUnit="ARS">
 						<firstStatus>
 							<ObjectStatus
