Busy indicator and events for list adition and deletion implemented for master.

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -9,7 +9,8 @@
 
 			<semantic:DetailPage
 					title="{i18n>detail.title}: {/name} ({/date})"
-                    showNavButton="{device>/system/phone}" navButtonPress="handleNavButtonPress">
+                    showNavButton="{device>/system/phone}" navButtonPress="handleNavButtonPress"
+                    id="listDetail">
 
                 <ObjectHeader
                     binding="{/}"
