--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -60,7 +60,7 @@
             </List>
             <semantic:customFooterContent>
                 <Button icon="sap-icon://add" type="Emphasized"
-					press="onAddItem"/>
+					press="onAddItem" id="addListButton"/>
             </semantic:customFooterContent>
         </semantic:MasterPage>
 
