Integration test modularization.

--- a/webapp/view/AddListForm.view.xml
+++ b/webapp/view/AddListForm.view.xml
@@ -48,8 +48,8 @@
             </f:Form>
 
         <semantic:customFooterContent>
-            <Button text="Adicionar" type="Emphasized" press="onAdd"></Button>
-            <Button text="Cancelar" type="Rejects" press="onCancel"></Button>
+            <Button text="Adicionar" type="Emphasized" press="onAdd" id="addButton"></Button>
+            <Button text="Cancelar" type="Rejects" press="onCancel" id="cancelButton"></Button>
         </semantic:customFooterContent>
 
     </semantic:DetailPage>
