--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -10,7 +10,7 @@
 			<semantic:DetailPage
 					title="{i18n>detail.title}: {/name} ({/date})"
                     showNavButton="{device>/system/phone}" navButtonPress="handleNavButtonPress"
-                    id="listDetail">
+                    id="detailPage">
 
                 <ObjectHeader
                     binding="{/}"
