--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -18,14 +18,14 @@
 			</Toolbar>
             <List 
 				items="{/}"
-				mode="SingleSelectMaster"
+				mode="{= ${device>/system/phone} ? 'None' : 'SingleSelectMaster' }"
 				selectionChange="onSelectList"
 				>
 				<items>
 					<ObjectListItem
 							title="{name}"
 							type="Active"
-							press=""
+							press="onSelectList"
 							number="{
 								parts: [{path: 'total'}, {path: ''}],
 								type: 'sap.ui.model.type.Currency',
