Change vendors tab icon.

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -58,7 +58,7 @@
 
         <!-- sap-icon://activity-items -->
                         <IconTabFilter
-                            icon="sap-icon://cart-4"
+                            icon="sap-icon://account"
                             iconColor=""
                             design="Vertical"
                             count=""
