Adjustments and code refactoring. Added input for e-mail addresses to be copied when is send the vendor's order e-mail.

--- a/webapp/view/AddItemForm.view.xml
+++ b/webapp/view/AddItemForm.view.xml
@@ -65,7 +65,14 @@
 
         <List
             id="productsList"
-            items="{products>/}"
+            items="{
+                path:'products>/',
+                sorter: {
+                    path: 'product/title',
+                    descending: false,
+                    group: false
+                }
+            }"
             selectionChange="onVendorChange"
             mode="MultiSelect"
             includeItemInSelection="true" >
