--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -20,6 +20,7 @@
 				items="{/}"
 				mode="{= ${device>/system/phone} ? 'None' : 'SingleSelectMaster' }"
 				selectionChange="onSelectList"
+				id='listsList'
 				>
 				<items>
 					<ObjectListItem
