Added option to the vendors select of the add item view, to use no vendor filter.

--- a/webapp/view/AddItemForm.view.xml
+++ b/webapp/view/AddItemForm.view.xml
@@ -39,7 +39,7 @@
                             <Select
                                 id="vendorsSelect"
                                 change="onChangeVendor"
-                                forceSelection="false"
+                                forceSelection="true"
                                 selectedKey="{form>/vendor}"
                                 items="{
                                     path: 'vendors>/',
