--- a/webapp/view/AddItemForm.view.xml
+++ b/webapp/view/AddItemForm.view.xml
@@ -63,8 +63,11 @@
             </f:FormContainer>
         </f:Form>
 
-        <List
-            id="productsList"
+        <Table
+            id="productsTable"
+            headerText="Productos"
+            mode="MultiSelect"
+            keyboardMode="Edit"
             items="{
                 path:'products>/',
                 sorter: {
@@ -72,24 +75,41 @@
                     descending: false,
                     group: false
                 }
-            }"
-            selectionChange="onVendorChange"
-            mode="MultiSelect"
-            includeItemInSelection="true" >
-            <infoToolbar>
-                <Toolbar
-                    visible="false"
-                    id="idInfoToolbar" >
-                    <Label id="idFilterLabel" />
-                </Toolbar>
-            </infoToolbar>
+            }" >
+        
+            <columns>
+                <Column>
+                    <header>
+                        <Text text="Producto" />
+                    </header>
+                </Column>
+                <Column
+                    minScreenWidth="Tablet"
+                    demandPopin="true"
+                    hAlign="Center" >
+                    <header>
+                        <Text text="Cantidad Requerida" />
+                    </header>
+                </Column>
+            </columns>
             <items>
-                <StandardListItem
-                    title="{products>product/title}"
-                    description="{products>uom/name}"
-                    />
+                <ColumnListItem>
+                    <cells>
+                        <ObjectIdentifier title="{products>product/title}" text="" />
+                        <Input 
+                            editable="true"
+                            submit="onSubmitQuantity"
+                            value="{
+                                parts: [{path: 'products>quantity'}, {path: 'products>uom/name'}],
+                                type: 'sap.ui.model.type.Currency',
+                                formatOptions: {
+                                    showMeasure: true
+                                } 
+                            }" />
+                    </cells>
+                </ColumnListItem>
             </items>
-        </List>
+        </Table>
 
         <semantic:customFooterContent>
             <Button text="Adicionar" type="Emphasized" press="onAdd" id="addButton"></Button>
