--- a/webapp/view/Master.view.xml
+++ b/webapp/view/Master.view.xml
@@ -64,7 +64,7 @@
 
             </List>
             <semantic:customFooterContent>
-                <Button icon="sap-icon://add" type="Emphasized"
+                <Button icon="sap-icon://add" type="Accept"
 					press="onAddItem" id="addListButton"/>
             </semantic:customFooterContent>
         </semantic:MasterPage>
