Items tab color changed depending in the number of pending items.

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -72,7 +72,7 @@
 
                         <IconTabFilter
                             icon="sap-icon://cart-4"
-                            iconColor=""
+                            iconColor="{=${/pending_items}>0?'Negative':'Default'}"
                             design="Vertical"
                             count="{/items_count}"
                             text="Items"
